--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -147,25 +147,44 @@
     /*------------Style for the join page------------------*/
     main#join-main {
         display:grid;
-        grid-template-columns: 2fr 3fr;
+        grid-template-columns: 2vh 4fr 4fr 2vh;
     } 
 
-    table {
-        margin-top: 18vh;
+    #join-main h2 {
+        grid-column: 1/5;
     }
+
+    #table {
+        grid-column: 2/3;
+    }
+
+    table {
+        margin-top: 15vh; 
+        margin-right: 1vw;
+        
+    }
+
+    table th {
+        font-size: large;
+    }
+    
    
    form {
         grid-row: 1;
-        margin-top: 27px;
+        grid-column: 3/4;
+        margin: 8vh 1vw 0 ; 
     }
 
-    form div{
-        padding: 0;  
+    form fieldset {
+        margin-left: 0;
     }
-    
    form label.sbs {
         padding: .5rem 0;
     
     }
+
+    form div {
+        margin-left: 0;
+     }
 
 }
