--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -94,10 +94,7 @@
         grid-column: 1/3;
     }
 
-    form div{
-        padding: 0; 
-        
-    }
+
 
     /*------------Style for the thank you page------------------*/
     #thanks-footer {
